--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,45 @@
-<h1>Welcome to Jumpstart!</h1>
-<p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+<h1 class="text-center">Welcome to Management App!</h1>
+
+<div class="container m-5">
+  <div class="row mt-3">
+    <div class="col-md-12 text-center mb-2">
+      <h1><b>My Projects</b></h1>
+    </div>
+    <div class="col-md-12">
+      <div class="row">
+        <div class="col-sm-6">
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-lg-12 col-md-12 ml-auto mr-auto pb-1 text-center">
+          <% if @projects.blank? %>
+            <h4 class="alert alert-warning">There are no projects assigned to you yet</h4>
+          <% end %>
+        </div>
+        <% @projects.each do |project| %>
+          <div class="col-lg-12 col-md-12">
+            <div class="ui-block shadow-lg rounded">
+              <div class="ui-block-content">
+                <div class="row p-3">
+                  <div class="col-md-12">
+                    <div class="row">
+                      <div class="col-lg-12">
+                        <h2>
+                          <%= project.title%>
+                        </h2>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <p><%= project.discription %></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
