--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,33 +12,42 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-12 col-md-12 ml-auto mr-auto pb-1 text-center">
-          <% if @projects.blank? %>
-            <h4 class="alert alert-warning">There are no projects assigned to you yet</h4>
-          <% end %>
-        </div>
-        <% @projects.each do |project| %>
-          <div class="col-lg-12 col-md-12">
-            <div class="ui-block shadow-lg rounded">
-              <div class="ui-block-content">
-                <div class="row p-3">
-                  <div class="col-md-12">
-                    <div class="row">
-                      <div class="col-lg-12">
-                        <h2>
-                          <%= project.title%>
-                        </h2>
+        <% if @projects.present? %>
+          <% @projects.each do |project| %>
+            <div class="col-lg-12 col-md-12">
+              <div class="ui-block shadow-lg rounded">
+                <div class="ui-block-content">
+                  <div class="row p-3">
+                    <div class="col-md-12">
+                      <div class="row">
+                        <div class="col-lg-12">
+                          <h2>
+                            <%= project.title%>
+                          </h2>
+                        </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="col-md-12">
-                    <p><%= project.discription %></p>
+                    <div class="col-md-12">
+                      <p><%= project.discription %></p>
+                    </div>
+                    <div class="col-md-12">
+                      Team names:
+                    </div>
+                    <div class="col-md-12">
+                      <% project.teams.each do |team| %>
+                        <p><%= team.title %></p>
+                      <% end %>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
-        <% end %>
+          <% end %>
+          <% else %>
+            <div class="col-lg-12 col-md-12 ml-auto mr-auto pb-1 text-center">
+              <h4 class="alert alert-warning">There are no projects assigned to you yet</h4>
+            </div>
+          <% end %>
       </div>
     </div>
   </div>
