--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,54 +1,56 @@
 <h1 class="text-center">Welcome to Management App!</h1>
 
-<div class="container m-5">
-  <div class="row mt-3">
-    <div class="col-md-12 text-center mb-2">
-      <h1><b>My Projects</b></h1>
-    </div>
-    <div class="col-md-12">
-      <div class="row">
-        <div class="col-sm-6">
-        </div>
+<% if current_user %>
+  <div class="container m-5">
+    <div class="row mt-3">
+      <div class="col-md-12 text-center mb-2">
+        <h1><b>My Projects</b></h1>
       </div>
+      <div class="col-md-12">
+        <div class="row">
+          <div class="col-sm-6">
+          </div>
+        </div>
 
-      <div class="row">
-        <% if @projects.present? %>
-          <% @projects.each do |project| %>
-            <div class="col-lg-12 col-md-12">
-              <div class="ui-block shadow-lg rounded">
-                <div class="ui-block-content">
-                  <div class="row p-3">
-                    <div class="col-md-12">
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <h2>
-                            <%= project.title%>
-                          </h2>
+        <div class="row">
+          <% if @projects.present? %>
+            <% @projects.each do |project| %>
+              <div class="col-lg-12 col-md-12">
+                <div class="ui-block shadow-lg rounded">
+                  <div class="ui-block-content">
+                    <div class="row p-3">
+                      <div class="col-md-12">
+                        <div class="row">
+                          <div class="col-lg-12">
+                            <h2>
+                              <%= project.title%>
+                            </h2>
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="col-md-12">
-                      <p><%= project.discription %></p>
-                    </div>
-                    <div class="col-md-12">
-                      Team names:
-                    </div>
-                    <div class="col-md-12">
-                      <% project.teams.each do |team| %>
-                        <p><%= team.title %></p>
-                      <% end %>
+                      <div class="col-md-12">
+                        <p><%= project.discription %></p>
+                      </div>
+                      <div class="col-md-12">
+                        Team names:
+                      </div>
+                      <div class="col-md-12">
+                        <% project.teams.each do |team| %>
+                          <p><%= team.title %></p>
+                        <% end %>
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
-            </div>
-          <% end %>
-          <% else %>
-            <div class="col-lg-12 col-md-12 ml-auto mr-auto pb-1 text-center">
-              <h4 class="alert alert-warning">There are no projects assigned to you yet</h4>
-            </div>
-          <% end %>
+            <% end %>
+            <% else %>
+              <div class="col-lg-12 col-md-12 ml-auto mr-auto pb-1 text-center">
+                <h4 class="alert alert-warning">There are no projects assigned to you yet</h4>
+              </div>
+            <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
+<% end %>
